<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.yz</groupId>
        <artifactId>mall-oms</artifactId>
        <version>0.0.6-SNAPSHOT</version>
    </parent>


    <artifactId>mall-oms-core</artifactId>
    <description>订单服务核心功能实现模块</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.yz</groupId>
            <artifactId>mall-oms-interface</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.yz</groupId>
            <artifactId>mall-oms-dao</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.yz</groupId>
            <artifactId>mall-auth-interface</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.yz</groupId>
            <artifactId>mall-serial-interface</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.yz</groupId>
            <artifactId>mall-sys-interface</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.yz</groupId>
            <artifactId>mall-pms-interface</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.yz</groupId>
            <artifactId>mall-web</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.yz</groupId>
            <artifactId>mall-redis</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>